# gkrelluim

./: ChangeLog  Makefile.am  README  configure.ac
gkrelluim/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  configure.in  gkrelluim.c
gkrelluim/po/: POTFILES.in  gkrelluim.pot  ja.po
gkrelluim/src/: Makefile.am  gkrelluim.c  gkrelluim.h  uim-helper.c  uim-helper.h
po/: gkrelluim.pot  ja.po
src/: Makefile.am  gkrelluim.c  gkrelluim.h  uim-helper.c  uim-helper.h
