#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([gkrelluim], 0.0.3, [d+gkrelluim@vdr.jp])
AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION, no-define)

AC_CONFIG_SRCDIR([src/gkrelluim.c])

# Checks for programs.
AC_PROG_CC

# pkg-config
PKG_CHECK_MODULES(UIM, uim >= 0.4.6)
AC_SUBST(UIM_CFLAGS)
AC_SUBST(UIM_LIBS)
#
PKG_CHECK_MODULES(GKRELLM, gkrellm >= 2.2.4)
AC_SUBST(GKRELLM_CFLAGS)
AC_SUBST(GKRELLM_LIBS)

AC_OUTPUT([Makefile
           src/Makefile])
